Copied bigarel spacing more correctly

--- a/docs/css/display-screen.css
+++ b/docs/css/display-screen.css
@@ -21,7 +21,7 @@ h3 {
 	font-size: 4.4em;
 	line-height: 1.3;
 	font-weight: 300;
-	margin: 0em;
+	margin: 0em 0em 0.7em;
 	padding: 0em;
 }
 
@@ -31,9 +31,8 @@ h3:before {
 	margin: 0em 0em 0em -1em;
 }
 
-h2,
 h3 {
-	margin: 0em 0em 0.2em;
+	margin: 0em 0em 0.3em;
 }
 
 h3 em {
@@ -44,14 +43,16 @@ em {
 	font-style: normal;
 	color: #7f8b6a;
 	border-bottom: 2px solid #7f8b6a;
-	padding: 0em 0.1em 0.07em;
+	padding: 0em 0em 0.07em;
+	margin: 0em 0.1em;
 }
 
 a {
 	color: #fff;
 	text-decoration: none;
-	padding: 0em 0.1em 0.07em;
+	padding: 0em 0em 0.07em;
 	border-bottom: 2px solid #fff;
+	margin: 0em 0.1em;
 }
 
 a:hover {
